Welcome, name should stay centered better on phone resolutions now. Also slapped on a super low budget media query and app min size to address some (but not all) of the issues with the app being excessively wide on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   font-size:1.2em;
+  min-width:450px;
 }
 
 .fullHeight {
